1) В FileBackedTaskManager избавился от instanceof, так как он не соответствует парадигме ООП. Использовал enum с типом задач. 2) В HistoryManagerImpl использовал noneMatch вместо инверсии с anyMatch, переименовал однобуквенную переменную в existingTask. 3) Декомпозировал тесты и разбил их на логические составляющие. 4) Убрал дублирования в тесте. 5) В HistoryManagerTest новые экземпляры создаются с помощью фабрики Managers 6) В InMemoryTaskManagerTest удалил setUp так как присвоение происходит в TaskManagerTest. 7) Удалил лишние тесты уже имеющиеся в TaskManagerTest